--- a/Autenticacion/Modulos/Agente/Reportes/templates/crear_reportes.html
+++ b/Autenticacion/Modulos/Agente/Reportes/templates/crear_reportes.html
@@ -1,47 +1,92 @@
-{% extends 'form_agente.html' %}
+{% extends 'modulos.html' %}
 {% load static %}
 
-{% block controls %}
-<div class="container mt-4">
-    <!-- Cabecera de Formulario (Fecha, Hora, Agente y Novedad) -->
-    <div class="row mb-3">
-        <div class="col-md-4">
-            <h5>Fecha</h5>
-            {{ form.fecha }}
-        </div>
+{% block header %}
+{% endblock %}
 
-        <div class="col-md-4">
-            <h5>Hora</h5>
-            {{ detalle_form.hora }}
-        </div>
+{% block sidebar %}
+{% endblock %}
 
-        <div class="col-md-4">
-            <h5>Novedad</h5>
-            {{ form.novedad }}
-        </div>
+{% block forms %}
+<div class="container mt-5">
+    {% if messages %}
+    <div class="error-message">
+        {% for message in messages %}
+        {{ message }}
+        {% endfor %}
+    </div>
+    {% endif %}
+    {% if form.errors %}
+    <div class="error-message">
+        {% for field in form %}
+        {% for error in field.errors %}
+        {{ error }} <br>
+        {% endfor %}
+        {% endfor %}
+    </div>
+    {% endif %}
+    <!-- Encabezado del formulario -->
+    <div class="text-center mb-4 p-4" style="background-color: #12171e; color: white; border-radius: 8px 8px 0px 0px;">
+        <h2 class="fw-bold">Formulario de Reporte</h2>
     </div>
 
-    <hr>
 
-    <!-- Detalle del Formulario -->
-    <div class="row mb-3">
+    <!-- Formulario -->
+    <form class="container text-dark" method="POST" action="{{ action_save }}" enctype="multipart/form-data"
+        name="registro">
+        {% csrf_token %}
 
-        <div class="col-md-4">
-            <h5>Prioridad</h5>
-            {{ form.prioridad }}
-        </div>
+        <div class="container mt-4">
+            <!-- Cabecera de Formulario (Fecha, Hora, Agente y Novedad) -->
+            <div class="row mb-3">
+                <div class="col-md-4">
+                    <h5>Fecha</h5>
+                    {{ form.fecha }}
+                </div>
 
-        <div class="col-md-4">
-            <h5>Evidencia</h5>
-            {{ detalle_form.evidencia }}
+                <div class="col-md-4">
+                    <h5>Hora</h5>
+                    {{ detalle_form.hora }}
+                </div>
+
+                <div class="col-md-4">
+                    <h5>Novedad</h5>
+                    {{ form.novedad }}
+                </div>
+            </div>
+
+            <hr>
+
+            <!-- Detalle del Formulario -->
+            <div class="row mb-3">
+                <div class="col-md-4">
+                    <h5>Prioridad</h5>
+                    {{ form.prioridad }}
+                </div>
+
+                <div class="col-md-4">
+                    <h5>Evidencia</h5>
+                    {{ detalle_form.evidencia }}
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <h5>Descripción</h5>
+                    {{ detalle_form.descripcion }}
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <h5>Descripción</h5>
-            {{ detalle_form.descripcion }}
+        <div class="div-btn">
+
+            <button type="submit" class="btn align-items-center ">
+                Guardar registro
+            </button>
+            <a href="{{cancelar}}" class="btn nav-link text-center align-items-center">
+                Cancelar
+            </a>
         </div>
-    </div>
+    </form>
+
 </div>
-
 {% endblock %}
