--- a/Autenticacion/Modulos/Agente/Reportes/templates/crear_reportes.html
+++ b/Autenticacion/Modulos/Agente/Reportes/templates/crear_reportes.html
@@ -41,12 +41,12 @@
             <div class="row mb-3">
                 <div class="col-md-4">
                     <h5>Fecha</h5>
-                    {{ form.fecha }}
+                    <input class="form-control" type="date" id="fecha" disabled>
                 </div>
 
                 <div class="col-md-4">
                     <h5>Hora</h5>
-                    {{ detalle_form.hora }}
+                    <input class="form-control" type="time" id="hora" disabled>
                 </div>
 
                 <div class="col-md-4">
@@ -87,6 +87,26 @@
             </a>
         </div>
     </form>
-
+    
+    <script>
+        // Obtener la fecha y hora actuales
+        const now = new Date();
+    
+        // Convertir la hora a UTC y luego ajustar a Ecuador (UTC-5)
+        const utcOffset = -5; // Ecuador está en UTC-5
+    
+        // Crear un nuevo objeto Date con la hora UTC y ajustar a la zona horaria de Ecuador (UTC-5)
+        const ecuadorTime = new Date(now.toLocaleString("en-US", { timeZone: "America/Guayaquil" }));
+    
+        // Obtener la fecha en formato YYYY-MM-DD
+        const fecha = ecuadorTime.toISOString().split('T')[0];  // Solo la fecha (YYYY-MM-DD)
+    
+        // Obtener la hora en formato HH:MM
+        const hora = ecuadorTime.toTimeString().split(' ')[0].substring(0, 5); // Solo la parte de la hora (HH:MM)
+    
+        // Asignar la fecha y la hora a los inputs
+        document.getElementById('fecha').value = fecha;
+        document.getElementById('hora').value = hora;
+    </script>
 </div>
 {% endblock %}
