--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_calendario.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_calendario.html
@@ -6,7 +6,7 @@ Modulo Calendario
 {% endblock %}
 
 {% block btnTitle %}
-<a class="btn btn-dark btn-add" onclick="abrir_modal('{{ dirurl }}')">
+<a class="btn btn-dark btn-add" href="{{ dirurl }}">
     Registrar un nuevo calendario
 </a>
 {% endblock %}
@@ -32,7 +32,7 @@ Modulo Calendario
     {% endif %}
 
     <td>
-        <a class="btn btn-dark" onclick="abrir_modal_editar('{% url 'calendario:editar_calendario' i.id %}')">
+        <a class="btn btn-dark" href="{% url 'calendario:editar_calendario' i.id %}">
             Editar
         </a>
         <form action="{% url 'calendario:InactivarActivarCalendario' i.id %}" method="post" style="display: inline;">
