--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_planificacion.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_planificacion.html
@@ -7,7 +7,7 @@ Modulo Planificación
 
 
 {% block btnTitle %}
-<a class="btn btn-dark btn-add" onclick="abrir_modal('{{ dirurl }}')">
+<a class="btn btn-dark btn-add" href="{{ dirurl }}">
     Registra una nueva planificación
 </a>
 {% endblock %}
