--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -83,7 +83,7 @@
                     </div>
                 </a>
             
-                <a href="#">
+                <a href="{% url 'reportesCoord:listado_reportes_agente' %}">
                     <div class="card">
                         <div class="img-container">
                             <img class="img" src="{% static 'img/modulos/Reportesdelpersonal.png' %}"
