--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -25,7 +25,7 @@
             {% endif %}
             {% if request.user.rol and request.user.rol.name == 'Coordinador' %}
             <li>
-                <a class="nav-link active" href="#">
+                <a class="nav-link active" href="{% url 'reportesCoord:listado_reportes_agente' %}">
                     <i class="fa-solid fa-box-tissue"></i>
                     <span class="nav-item"> Reportes del Personal </span>
                 </a>
