--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -23,11 +23,8 @@
 
 
     <!-- CSS - Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.lineicons.com/4.0/lineicons.css" />
-    <!-- CSS - Boxicons -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
     <link rel="icon" href="{% static 'img/logo_alcaldia_milagro_ico.ico' %}" type="image/x-icon">
     
 </head>
@@ -206,7 +203,7 @@
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <script src="{% static 'js/side_bar.js' %}"></script>
-    <script src="{% static 'js/modal.js' %}"></script>
+    <!-- <script src="{% static 'js/modal.js' %}"></script> -->
 
     {% block js %}
 
@@ -219,7 +216,7 @@
 
     <script src="{% static 'js/ocultar_mensajes.js'%}"></script>
     <script src="{% static 'js/hide_show_passw.js' %}"></script>
-    <script src="{% static " js/parametros_clave.js" %}"></script>
+    <script src="{% static 'js/parametros_clave.js' %}"></script>
     {% endblock %} {% endcomment %}
 </body>
 
