--- a/Autenticacion/templates/navbar.html
+++ b/Autenticacion/templates/navbar.html
@@ -5,5 +5,6 @@
         <a href="/">
             <img src="{% static 'img/logo_alcaldia_milagro.png' %}" alt="MunicipioMilagro" class="p-1 mx-4" width="150px">
         </a>
+        <p class="text-white m-2">{{nombre}} {{apellido}}</p>
     </div>
 </nav>
