--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -11,7 +11,7 @@
     <!-- Main Content -->
     {% block forms %}
     <main class="main-content pt-5 ">
-        
+
         {% if messages %}
         {% for message in messages %}
         <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px;
@@ -50,35 +50,48 @@
                 </table>
             </div>
             {% block pagination %}
-            <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-center">
-                    {% if page_obj.has_previous %}
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
-                    </li>
-                    {% endif %}
+            <!-- Paginación -->
+            <div class="d-flex justify-content-center mt-4">
+                {% if is_paginated %}
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        {% if page_obj.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_obj.previous_page_number }}&q={{ request.GET.q }}"
+                                aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        {% endif %}
 
-                    {# Primeras 3 páginas #}
-                    {% for i in page_obj.paginator.page_range|slice:":3" %}
-                    <li class="page-item {% if i == page_obj.number %}active{% endif %}">
-                        <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                    </li>
-                    {% endfor %}
+                        {% for num in paginator.page_range %}
+                        {% if num >= page_obj.number|add:-2 and num <= page_obj.number|add:2 %} <li
+                            class="page-item {% if num == page_obj.number %}active{% endif %}">
+                            <a class="page-link" href="?page={{ num }}&q={{ request.GET.q }}">{{ num }}</a>
+                            </li>
+                            {% elif num == 1 or num == paginator.num_pages %}
+                            <li class="page-item {% if num == page_obj.number %}active{% endif %}">
+                                <a class="page-link" href="?page={{ num }}&q={{ request.GET.q }}">{{ num }}</a>
+                            </li>
+                            {% elif num == page_obj.number|add:-3 or num == page_obj.number|add:3 %}
+                            <li class="page-item disabled">
+                                <a class="page-link">...</a>
+                            </li>
+                            {% endif %}
+                            {% endfor %}
 
-                    {# Si hay más páginas, mostrar '...' #}
-                    {% if page_obj.paginator.num_pages > 6 %}
-                    <li class="page-item disabled">
-                        <span class="page-link">...</span>
-                    </li>
-                    {% endif %}
-
-                    {% if page_obj.has_next %}
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </nav>
+                            {% if page_obj.has_next %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ page_obj.next_page_number }}&q={{ request.GET.q }}"
+                                    aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                            {% endif %}
+                    </ul>
+                </nav>
+                {% endif %}
+            </div>
             {% endblock %}
 
         </div>
