--- a/Autenticacion/templates/navbar.html
+++ b/Autenticacion/templates/navbar.html
@@ -8,7 +8,7 @@
         </a>
 
         <!-- Botón para colapsar el menú en pantallas móviles -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" 
+        <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" 
                 aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
