--- a/Autenticacion/Modulos/Agente/Reportes/templates/listar_reportes.html
+++ b/Autenticacion/Modulos/Agente/Reportes/templates/listar_reportes.html
@@ -21,7 +21,7 @@ Módulo Reportes
 <th> Prioridad </th>
 <th> Estado del incidente </th>
 <th> Ver evidencia </th>
-<th> Adicionar detalle </th>
+<!-- <th> Adicionar detalle </th> -->
 {% endblock %}
 
 {% block tbody %}
@@ -55,11 +55,11 @@ Módulo Reportes
             <i class="fa-sharp fa-solid fa-eye"></i>
         </button>
     </td>
-    <td>
+    <!-- <td>
         <a href="">
             <i class="fa-sharp fa-solid fa-plus btn btn-success"></i>
         </a>
-    </td>
+    </td> -->
 </tr>
 
 <!-- Modal para detalles -->
